    . [#422] Two #include lines, <linux/kernel.h> and <linux/types.h>, aren't needed for V4L
    . [#423] Man page location should be man/man1
    . [#424] Please have one cmake variablefor DATADIR
    . [#425] Please remove the 'register' specifier everywhere: it is deprecated and incompatible with C++17
    . [#433] Can not build android SDK
    . [#442] Unable to build ios framework
    . [#453] CMake error when building tutorials and examples with ViSP from installation folder
    . [#466] Build error with libboost_thread-mt.a
    . [#429] vpRobotViper650 getPosition(vpRobot::REFERENCE_FRAME) error
    . [#485] CMake error when PCL is build with VTK option VTK_ENABLE_KITS=ON
----------------------------------------------
ViSP 3.1.0 (released December 22nd, 2017)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Wenfeng Cai, Oleksandr Borysov, Marc Pouliquen, Ronald Ensing,
      Yuriy Baranov, Jason Chevie
    . Google Summer of Code 2017: Vikas Thamizharasan that developed for the
      model-based tracker Blender import/export CAD model plugins and a Qt-based
      CAD model viewer
  - New features
    . Improve vpRealSense to better support R200 device
    . Improve vpConfig.h header content to remove path to build tree when installed
    . Speed-up vpMbKltTracker and vpMbEdgeKltTracker during reinit
    . Remove numerical recipes code that is not open-source
    . Changes done in vpMatrix to use either Lapack, OpenCV or GSL 3rd party
    . Eigen 3rd party was introduced as an alternative for matrix computation
    . Lapack is now embedded as a build-in when Lapack system library is not found
    . vpVideoReader was improved to better detect first and last image numbers of an
      image sequence and better handle the frame step
    . Speed-up vpColVector::insert(), vpMatrix::insert() and vpMatrix::stack()
    . Refactor model-based tracker (+ some segfault / memory fixes)