@@ -1703,6 +1703,16 @@ void vpRobotViper650::setVelocity(const vpRobot::vpControlFrameType frame, const
     Try(PrimitiveMOVESPEED_CART_Viper650(vel_sat.data, REPCAM_VIPER650));
     break;
   }
+  case vpRobot::END_EFFECTOR_FRAME: {
+    // Transform in camera frame
+    vpHomogeneousMatrix cMe;
+    this->get_cMe(cMe);
+    vpVelocityTwistMatrix cVe(cMe);
+    vpColVector v_c = cVe * vel_sat;
+    // Send velocities in m/s and rad/s
+    Try(PrimitiveMOVESPEED_CART_Viper650(v_c.data, REPCAM_VIPER650));
+    break;
+  }
   case vpRobot::ARTICULAR_FRAME: {
     // Convert all the velocities from rad/s into deg/s
     vel_sat.rad2deg();
